--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 anyhow = "1.0.66"
 clap = { version = "4.0.29", features = ["derive"] }
 env_logger = "0.10.0"
+itertools = "0.10.5"
 log = "0.4.17"
+regex = "1.7.0"
